--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <!DOCTYPE html>
 <html b:version="2" class="v2" expr:dir="data:blog.languageDirection" expr:lang="data:blog.locale" xmlns="http://www.w3.org/1999/xhtml" xmlns:b="http://www.google.com/2005/gml/b" xmlns:data="http://www.google.com/2005/gml/data" xmlns:expr="http://www.google.com/2005/gml/expr">
   <head>
-    <title>FinderSingles.site</title>
+    <title>HotHookUpsNow.online</title>
 
     <!-- twitter card details -->
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:site" content="@CurvyMoms"/>
-    <meta name="twitter:url" content="https://finderfwb.online/"/>
-    <meta name="twitter:title" content="My spicy page is on free right now!!"/>
-    <meta name="twitter:description" content="@"/>
+    <meta name="twitter:url" content="https://HotHookUpsNow.online/"/>
+    <meta name="twitter:title" content=" My hot page is on free right now !!! "/>
+    <meta name="twitter:description" content="@CurvyMoms"/>
     <meta name="twitter:image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhe8FO-jjYmkb7DBh-_1N7_u74ZygssJUGnSiper1P2e9VdgQdBL9OwAfTGepRu6Ieu8xibusjPqXohkqXNYTEVp5h84y313Dl0wfC2o6EUCIo0VLkLvpgypqP6_QJ08A2M8q4r5BBWDJ_pX9l34f3T_n95kZ4yT3tPtd7Xv-6wJHTNSrVEh4eaRnzQWATD/s320/Screenshot_20231013_143519_X.jpg"/>
     <!-- end twitter card details -->
 
@@ -20,7 +20,7 @@
         hash = hash.substring(1);
         var cleanHash = hash.replace(/[^a-zA-Z0-9\s]/g, '-');
         cleanHash = cleanHash.replace(/\s+/g, '-');
-        document.title = 'FinderSingles: ' + cleanHash;
+        document.title = 'HotHookUpsNow: ' + cleanHash;
       }
     </script>
 
@@ -67,15 +67,15 @@
                 document.cookie = "visited=true;expires=" + expires.toUTCString();
 
                 if (country_code == "US") {
-                  window.location.href = "https://bgfffig.hornylocls.com/s/63d00e240fcd5?subsource=FSingles";
+                  window.location.href = "https://bgfffig.hornylocls.com/s/63d00e240fcd5?subsource=HookUps";
                 } else {
-                  window.location.href = "https://bgfffig.hornylocls.com/s/63d00e240fcd5?subsource=FSingles";
+                  window.location.href = "https://bgfffig.hornylocls.com/s/63d00e240fcd5?subsource=HookUps";
                 }
               } else {
                 if (country_code == "US") {
-                  window.location.href = "https://bgfffig.hornylocls.com/s/63d00e240fcd5?subsource=FSingles";
+                  window.location.href = "https://bgfffig.hornylocls.com/s/63d00e240fcd5?subsource=HookUps";
                 } else {
-                  window.location.href = "https://bgfffig.hornylocls.com/s/63d00e240fcd5?subsource=FSingles";
+                  window.location.href = "https://bgfffig.hornylocls.com/s/63d00e240fcd5?subsource=HookUps";
                 }
               }
             });
