--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
-<?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE html>
-<html b:version="2" class="v2" expr:dir="data:blog.languageDirection" expr:lang="data:blog.locale" xmlns="http://www.w3.org/1999/xhtml" xmlns:b="http://www.google.com/2005/gml/b" xmlns:data="http://www.google.com/2005/gml/data" xmlns:expr="http://www.google.com/2005/gml/expr">
-  <head>
-    <title>HotHookUpsNow.online</title>
+<html lang="en">
+
+<head>
+
+    <title>HotHookUpsNow - Discreet Encounters With Mature Women</title> 
 
     <!-- twitter card details -->
     <meta name="twitter:card" content="summary_large_image"/>
@@ -24,78 +25,88 @@
       }
     </script>
 
-    <!-- Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-4RK11EWEJE"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async='async' src='https://www.googletagmanager.com/gtag/js?id=G-4RK11EWEJE'></script>
     <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){ dataLayer.push(arguments); }
-      gtag('js', new Date());
-      gtag('config', 'G-4RK11EWEJE');
-    </script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-4RK11EWEJE');
+    </script> 
 
-    <!-- Favicons -->
-    <meta name="msapplication-TileColor" content="#da532c"/>
-    <meta name="theme-color" content="#ffffff"/>
-
-    <!-- Open Graph Tags -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0"/>
+    <meta content='width=device-width, initial-scale=1.0, user-scalable=0' name='viewport'/>
+    <link href="https://maturelovers.club/alecia/378f0dd4826e490864d2573ce6719e6e.static.css" rel="stylesheet"/>
+    <meta content="#ffffff" name="msapplication-TileColor"/>
+    <meta content="https://maturelovers.club/alecia/theme/australianlocals/images/favicon/ms-icon-144x144.png" name="msapplication-TileImage"/>
 
     <style>
-      .container {
-        width: 100vw;
-        height: 100vh;
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-      }
+        .background-image{
+            position:fixed;
+            top:0px;
+            left:0px;
+            width:100%;
+            height:100%;
+            background: url('https://maturelovers.club/alecia/in_css_7b82a3f147c0b6b1b41b141976336713.static.jpg') no-repeat center top fixed;
+            animation:zoomInOut 4s infinite;
+            -webkit-animation:zoomInOut 4s infinite;
+        }
+
+        /* Responsividade e melhor performance */
+        @media (max-width: 768px) {
+            .background-image {
+                background-size: cover;
+            }
+        }
+
+        .btn-primary {
+            background-color: #cc0000;
+            padding: 15px 30px;
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+            font-weight: bold;
+            text-align: center;
+            display: inline-block;
+            margin: 20px 0;
+        }
+
+        .btn-primary:hover {
+            background-color: #990000;
+        }
+
+        /* Texto e descrição para SEO */
+        .seo-description {
+            color: white;
+            text-align: center;
+            font-size: 18px;
+            max-width: 80%;
+            margin: 20px auto;
+        }
     </style>
 
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js" type="text/javascript"></script>
-    <script type="text/javascript">
-      function AbreLink() {
-        var xhttp = new XMLHttpRequest();
-        xhttp.onreadystatechange = function () {
-          if (this.readyState == 4 && this.status == 200) {
-            var country_code = this.responseText.replace(/(\r\n|\n|\r)/gm, "").split('loc=');
-            country_code = country_code[1].split('tls=')[0];
+</head>
 
-            jQuery(document).ready(function () {
-              if (document.cookie.indexOf('visited=true') == -1) {
-                var fifteenDays = 1000 * 60 * 60 * 12;
-                var expires = new Date((new Date()).valueOf() + fifteenDays);
-                document.cookie = "visited=true;expires=" + expires.toUTCString();
+<body>
+    <div class="background-image"></div>
+    <div class="website-container">
 
-                if (country_code == "US") {
-                  window.location.href = "https://bgfffig.hornylocls.com/s/63d00e240fcd5?subsource=HookUps";
-                } else {
-                  window.location.href = "https://bgfffig.hornylocls.com/s/63d00e240fcd5?subsource=HookUps";
-                }
-              } else {
-                if (country_code == "US") {
-                  window.location.href = "https://bgfffig.hornylocls.com/s/63d00e240fcd5?subsource=HookUps";
-                } else {
-                  window.location.href = "https://bgfffig.hornylocls.com/s/63d00e240fcd5?subsource=HookUps";
-                }
-              }
-            });
-          }
-        };
-        xhttp.open("GET", "https://www.cloudflare.com/cdn-cgi/trace", true);
-        xhttp.send();
-      }
-    </script>
-  </head>
+        <div class="step step_0" style="display: block;">
+            <div class="step-title">
+                Are you ready to come in contact with mature women wanting discreet encounters?
+            </div>
 
-  <body>
-    <div id="container-imagem">
-      <center class="container">
-        <img height="148" width="248" src="https://y12fcu.org/getmedia/d0e7486b-4446-4e33-bb25-a6dd8a454a71/Young-Adults-Loading-Gif.gif"/>
-      </center>
+            <a href="https://bgfffig.hornylocls.com/s/63d00e240fcd5?subsource=HotHookUpsNow">
+                <span class="btn-primary">Yes, let me in!</span>
+            </a>
+
+            <div class="seo-description">
+                Meet real mature women near you who are looking for no-strings-attached encounters. 100% free to join and browse!
+            </div>
+
+            <div style="clear:both"></div>
+        </div>
+
     </div>
+</body>
 
-    <script type="text/javascript">
-      setTimeout('AbreLink()', 0000);
-    </script>
-  </body>
 </html>
