--- a/index.html
+++ b/index.html
@@ -116,17 +116,19 @@
     }
   </style>
 </head>
+
+
 <body>
 
   <div class="container" id="landing-box">
-    <div class="logo">PrivateMatch™</div>
+    <div class="logo">HotHookUpsNow™</div>
     <div class="headline">Thousands of Naughty Singles Online Now!</div>
     <div class="subheadline" id="status-text">Checking singles availability in your area...</div>
     <div class="loader" id="loader"></div>
     <div class="online-count" id="online-count" style="display:none;"></div>
 
-    <a href="go.html" id="cta" class="cta-button" target="_blank" style="display:none;">
-      Tap Here to Join Free & No Signup!
+    <a href="go.html" id="cta" class="cta-button" style="display:none;">
+       Tap Here to Join Free & No Signup!
     </a>
 
     <div class="footnote" id="footnote" style="display:none;">
@@ -141,24 +143,42 @@
     const cta = document.getElementById('cta');
     const footnote = document.getElementById('footnote');
 
-    // Simula o progresso do carregamento e atualização dos textos
-    setTimeout(() => {
-      statusText.textContent = 'Almost done... Verifying active users nearby.';
-    }, 3000);
-
-    // Gera um número dinâmico aleatório de usuários online entre 800 e 1200
+    // Função para gerar número aleatório entre 800 e 1200
     function getRandomOnline() {
       return Math.floor(Math.random() * 400) + 800;
     }
 
-    setTimeout(() => {
-      loader.style.display = 'none';
-      onlineCount.style.display = 'block';
-      onlineCount.textContent = getRandomOnline() + ' singles are waiting for you!';
-      statusText.style.display = 'none';
-      cta.style.display = 'inline-block';
-      footnote.style.display = 'block';
-    }, 6000);
+    // Busca a cidade pela API ipapi.co
+    async function fetchCity() {
+      try {
+        const response = await fetch('https://ipapi.co/json/');
+        if (!response.ok) throw new Error('Failed to fetch location');
+        const data = await response.json();
+        return data.city || 'your area';
+      } catch {
+        return 'your area'; // fallback
+      }
+    }
+
+    async function start() {
+      const city = await fetchCity();
+
+      setTimeout(() => {
+        statusText.textContent = 'Almost done... Verifying active users nearby.';
+      }, 3000);
+
+      setTimeout(() => {
+        loader.style.display = 'none';
+        onlineCount.style.display = 'block';
+        onlineCount.textContent = `${getRandomOnline()} singles are waiting for you in ${city}!`;
+        statusText.style.display = 'none';
+        cta.style.display = 'inline-block';
+        footnote.style.display = 'block';
+      }, 3000);
+    }
+
+    start();
   </script>
+
 </body>
 </html>
