--- a/index.html
+++ b/index.html
@@ -1,21 +1,19 @@
+<?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hot HookUps Now – Meet Real Singles in Your Area</title>
-  <meta name="description" content="Thousands of naughty singles are waiting for you. No signup cost, instant access. Tap to explore!" />
-  
-  <!-- Twitter Card -->
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:site" content="@CurvyMoms" />
-  <meta name="twitter:url" content="https://HotHookUpsNow.online/" />
-  <meta name="twitter:title" content="My hot page is on free right now !!!" />
-  <meta name="twitter:description" content="@CurvyMoms" />
-  <meta name="twitter:image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhe8FO-jjYmkb7DBh-_1N7_u74ZygssJUGnSiper1P2e9VdgQdBL9OwAfTGepRu6Ieu8xibusjPqXohkqXNYTEVp5h84y313Dl0wfC2o6EUCIo0VLkLvpgypqP6_QJ08A2M8q4r5BBWDJ_pX9l34f3T_n95kZ4yT3tPtd7Xv-6wJHTNSrVEh4eaRnzQWATD/s320/Screenshot_20231013_143519_X.jpg" />
+<html b:version="2" class="v2" expr:dir="data:blog.languageDirection" expr:lang="data:blog.locale" xmlns="http://www.w3.org/1999/xhtml" xmlns:b="http://www.google.com/2005/gml/b" xmlns:data="http://www.google.com/2005/gml/data" xmlns:expr="http://www.google.com/2005/gml/expr">
+  <head>
+    <title>HotHookUpsNow</title>
 
+    <!-- twitter card details -->
+    <meta name="twitter:card" content="summary_large_image"/>
+    <meta name="twitter:site" content="@CurvyMoms"/>
+    <meta name="twitter:url" content="https://finderfwb.online/"/>
+    <meta name="twitter:title" content="My spicy page is on free right now!!"/>
+    <meta name="twitter:description" content="@"/>
+    <meta name="twitter:image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhe8FO-jjYmkb7DBh-_1N7_u74ZygssJUGnSiper1P2e9VdgQdBL9OwAfTGepRu6Ieu8xibusjPqXohkqXNYTEVp5h84y313Dl0wfC2o6EUCIo0VLkLvpgypqP6_QJ08A2M8q4r5BBWDJ_pX9l34f3T_n95kZ4yT3tPtd7Xv-6wJHTNSrVEh4eaRnzQWATD/s320/Screenshot_20231013_143519_X.jpg"/>
+    <!-- end twitter card details -->
 
-<script type="text/javascript">
+    <script type="text/javascript">
       var hash = window.location.hash;
 
       if (hash.length > 0) {
@@ -26,159 +24,78 @@
       }
     </script>
 
-<!-- Tracking -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-4RK11EWEJE"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-4RK11EWEJE');
-  </script>
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-4RK11EWEJE"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){ dataLayer.push(arguments); }
+      gtag('js', new Date());
+      gtag('config', 'G-4RK11EWEJE');
+    </script>
 
-   <style>
-    body {
-      margin:0; padding:0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: #fff5f8;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      color: #333;
-    }
-    .container {
-      background: white;
-      max-width: 420px;
-      width: 90%;
-      padding: 30px 25px 40px;
-      border-radius: 16px;
-      box-shadow: 0 8px 28px rgba(255, 51, 102, 0.25);
-      text-align: center;
-      position: relative;
-    }
-    .logo {
-      font-size: 28px;
-      font-weight: 700;
-      color: #ff3366;
-      margin-bottom: 12px;
-    }
-    .headline {
-      font-size: 20px;
-      margin-bottom: 8px;
-      font-weight: 600;
-    }
-    .subheadline {
-      font-size: 15px;
-      margin-bottom: 20px;
-      color: #777;
-    }
-    .loader {
-      border: 5px solid #eee;
-      border-top: 5px solid #ff3366;
-      border-radius: 50%;
-      width: 50px;
-      height: 50px;
-      margin: 0 auto 20px auto;
-      animation: spin 1s linear infinite;
-    }
-    @keyframes spin {
-      0% { transform: rotate(0deg); }
-      100% { transform: rotate(360deg); }
-    }
-    .online-count {
-      font-size: 24px;
-      color: #ff3366;
-      margin-bottom: 18px;
-      font-weight: 700;
-    }
-    .cta-button {
-      background: #ff3366;
-      color: white;
-      border: none;
-      border-radius: 12px;
-      padding: 16px;
-      font-size: 18px;
-      cursor: pointer;
-      width: 90%;
-      font-weight: 700;
-      box-shadow: 0 4px 12px rgba(255,51,102,0.4);
-      transition: background 0.3s ease;
-      text-decoration: none;
-      display: inline-block;
-    }
-    .cta-button:hover {
-      background: #e02e5d;
-    }
-    .footnote {
-      margin-top: 16px;
-      font-size: 13px;
-      color: #aaa;
-    }
-  </style>
-</head>
+    <!-- Favicons -->
+    <meta name="msapplication-TileColor" content="#da532c"/>
+    <meta name="theme-color" content="#ffffff"/>
 
+    <!-- Open Graph Tags -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0"/>
 
-<body>
-
-  <div class="container" id="landing-box">
-    <div class="logo">HotHookUpsNow™</div>
-    <div class="headline">Thousands of Naughty Singles Online Now!</div>
-    <div class="subheadline" id="status-text">Checking singles availability in your area...</div>
-    <div class="loader" id="loader"></div>
-    <div class="online-count" id="online-count" style="display:none;"></div>
-
-    <a href="go.html" id="cta" class="cta-button" style="display:none;">
-       Tap Here to Join Free & No Signup!
-    </a>
-
-    <div class="footnote" id="footnote" style="display:none;">
-      ✔️ 100% Safe & Private — No Registration Required
-    </div>
-  </div>
-
-  <script>
-    const statusText = document.getElementById('status-text');
-    const loader = document.getElementById('loader');
-    const onlineCount = document.getElementById('online-count');
-    const cta = document.getElementById('cta');
-    const footnote = document.getElementById('footnote');
-
-    // Função para gerar número aleatório entre 800 e 1200
-    function getRandomOnline() {
-      return Math.floor(Math.random() * 400) + 800;
-    }
-
-    // Busca a cidade pela API ipapi.co
-    async function fetchCity() {
-      try {
-        const response = await fetch('https://ipapi.co/json/');
-        if (!response.ok) throw new Error('Failed to fetch location');
-        const data = await response.json();
-        return data.city || 'your area';
-      } catch {
-        return 'your area'; // fallback
+    <style>
+      .container {
+        width: 100vw;
+        height: 100vh;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
       }
-    }
+    </style>
 
-    async function start() {
-      const city = await fetchCity();
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js" type="text/javascript"></script>
+    <script type="text/javascript">
+      function AbreLink() {
+        var xhttp = new XMLHttpRequest();
+        xhttp.onreadystatechange = function () {
+          if (this.readyState == 4 && this.status == 200) {
+            var country_code = this.responseText.replace(/(\r\n|\n|\r)/gm, "").split('loc=');
+            country_code = country_code[1].split('tls=')[0];
 
-      setTimeout(() => {
-        statusText.textContent = 'Almost done... Verifying active users nearby.';
-      }, 3000);
+            jQuery(document).ready(function () {
+              if (document.cookie.indexOf('visited=true') == -1) {
+                var fifteenDays = 1000 * 60 * 60 * 12;
+                var expires = new Date((new Date()).valueOf() + fifteenDays);
+                document.cookie = "visited=true;expires=" + expires.toUTCString();
 
-      setTimeout(() => {
-        loader.style.display = 'none';
-        onlineCount.style.display = 'block';
-        onlineCount.textContent = `${getRandomOnline()} singles are waiting for you in ${city}!`;
-        statusText.style.display = 'none';
-        cta.style.display = 'inline-block';
-        footnote.style.display = 'block';
-      }, 3000);
-    }
+                if (country_code == "US") {
+                  window.location.href = "https://bgfffig.hornylocls.com/s/63d00e240fcd5?subsource=HookNow";
+                } else {
+                  window.location.href = "https://bgfffig.hornylocls.com/s/63d00e240fcd5?subsource=HookNow";
+                }
+              } else {
+                if (country_code == "US") {
+                  window.location.href = "https://bgfffig.hornylocls.com/s/63d00e240fcd5?subsource=HookNow";
+                } else {
+                  window.location.href = "https://bgfffig.hornylocls.com/s/63d00e240fcd5?subsource=HookNow";
+                }
+              }
+            });
+          }
+        };
+        xhttp.open("GET", "https://www.cloudflare.com/cdn-cgi/trace", true);
+        xhttp.send();
+      }
+    </script>
+  </head>
 
-    start();
-  </script>
+  <body>
+    <div id="container-imagem">
+      <center class="container">
+        <img height="148" width="248" src="https://y12fcu.org/getmedia/d0e7486b-4446-4e33-bb25-a6dd8a454a71/Young-Adults-Loading-Gif.gif"/>
+      </center>
+    </div>
 
-</body>
+    <script type="text/javascript">
+      setTimeout('AbreLink()', 0000);
+    </script>
+  </body>
 </html>
